--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                </div>
                <div class="statusCnt">
                   <h2 class="status all">Статус:</h2>
-                  <h2 id="status">Пусто</h2>
+                  <h2 id="status"></h2>
                </div>
             </div>
             <div class="right">
