--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <title>Expenses</title>
       <link rel="stylesheet" href="./reset.css" />
       <link rel="stylesheet" href="./index.css" />
+      <link rel="shortcut icon" href="./fav.png" type="image/x-icon" />
    </head>
    <body>
       <div class="block">
